Finish Order unit tests