@@ -2,6 +2,7 @@ package com.example.cosmocats.service;
 
 import com.example.cosmocats.dto.ProductDto;
 import com.example.cosmocats.dto.order.OrderDto;
+import com.example.cosmocats.dto.order.OrderEntryDto;
 import com.example.cosmocats.entities.CategoryEntity;
 import com.example.cosmocats.entities.OrderEntity;
 import com.example.cosmocats.mapper.OrderMapper;
@@ -17,6 +18,7 @@ import org.junit.jupiter.api.Test;
 import org.mapstruct.factory.Mappers;
 import org.mockito.Mockito;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -27,13 +29,13 @@ import static org.mockito.Mockito.*;
 
 class OrderServiceTest {
 
-    /*private OrderService orderService;
+    private OrderService orderService;
     private OrderRepository orderRepository;
     private OrderEntryRepository orderEntryRepository;
     private OrderMapper orderMapper;
 
     private UUID id;
-    private Long orderId;
+    private UUID productUUID;
     private OrderDto testOrderDto;
 
     @BeforeEach
@@ -44,12 +46,22 @@ class OrderServiceTest {
         orderService = new OrderService(orderRepository, orderMapper, orderEntryRepository);
 
         id = UUID.randomUUID();
-        orderId = id.getMostSignificantBits();
+        productUUID = UUID.randomUUID();
 
         testOrderDto = OrderDto.builder()
                 .id(id)
-                .entryIds(List.of(UUID.randomUUID()))
-                .price(99.99f)
+                .bankCardId("4111-1111-1111-1111")
+                .price(49.98f)
+                .entryDtos(Arrays.asList(
+                        OrderEntryDto.builder()
+                                .productId(productUUID)
+                                .quantity(2)
+                                .build(),
+                        OrderEntryDto.builder()
+                                .productId(productUUID)
+                                .quantity(1)
+                                .build()
+                ))
                 .build();
     }
 
@@ -62,20 +74,23 @@ class OrderServiceTest {
         OrderDto createdOrder = orderService.createOrder(testOrderDto);
 
         assertNotNull(createdOrder);
-        assertEquals(99.99f, createdOrder.getPrice());
+        assertEquals(49.98f, createdOrder.getPrice());
+        assertEquals("4111-1111-1111-1111", createdOrder.getBankCardId());
     }
 
     @Test
     void getOrderById_whenOrderExists_shouldReturnOrder() {
         OrderEntity testOrderEntity = orderMapper.dtoToEntity(testOrderDto);
-        testOrderEntity.setId(orderId);
+        testOrderEntity.setId(orderMapper.uuidToLong(id));
 
-        when(orderRepository.findByNaturalId(orderId)).thenReturn(Optional.of(testOrderEntity));
+        when(orderRepository.findById(orderMapper.uuidToLong(id))).thenReturn(Optional.of(testOrderEntity));
 
         Optional<OrderDto> retrievedOrder = orderService.getOrderById(testOrderDto.getId());
 
         assertTrue(retrievedOrder.isPresent());
-        assertEquals(99.99f, retrievedOrder.get().getPrice());
+        assertEquals(49.98f, retrievedOrder.get().getPrice());
+        assertEquals("4111-1111-1111-1111", retrievedOrder.get().getBankCardId());
+
     }
 
     @Test
@@ -138,59 +153,85 @@ class OrderServiceTest {
     @Test
     void updateOrder_withValidData_shouldUpdateOrder() {
         OrderEntity testOrderEntity = orderMapper.dtoToEntity(testOrderDto);
-        testOrderEntity.setId(orderId);
+        testOrderEntity.setId(orderMapper.uuidToLong(id));
 
         OrderDto updatedOrderDto = OrderDto.builder()
-                .entryIds(List.of(UUID.randomUUID()))
-                .price(150.0f)
+                .id(id)
+                .bankCardId("4111-1111-1111-1111")
+                .price(29.99f)
+                .entryDtos(Arrays.asList(
+                        OrderEntryDto.builder()
+                                .productId(productUUID)
+                                .quantity(1)
+                                .build()
+                ))
                 .build();
 
         OrderEntity updatedOrderEntity = orderMapper.dtoToEntity(updatedOrderDto);
-        updatedOrderEntity.setId(orderId);
+        updatedOrderEntity.setId(orderMapper.uuidToLong(id));
 
-        when(orderRepository.existsById(orderId)).thenReturn(true);
-        when(orderRepository.findByNaturalId(orderId)).thenReturn(Optional.of(testOrderEntity));
+        when(orderRepository.findById(orderMapper.uuidToLong(id))).thenReturn(Optional.of(testOrderEntity));
         when(orderRepository.save(any(OrderEntity.class))).thenReturn(updatedOrderEntity);
 
         OrderDto result = orderService.updateOrder(testOrderDto.getId(), updatedOrderDto);
 
         assertNotNull(result);
-        assertEquals(150.0f, result.getPrice());
+        assertEquals(29.99f, result.getPrice());
+        assertEquals("4111-1111-1111-1111", result.getBankCardId());
     }
 
     @Test
     void updateOrder_whenOrderDoesNotExist_shouldThrowOrderNotFoundException() {
-        UUID newId = UUID.randomUUID();
+        UUID randId = UUID.randomUUID();
         OrderDto updatedOrderDto = OrderDto.builder()
-                .id(newId)
-                .entryIds(List.of(UUID.randomUUID()))
-                .price(150.0f)
+                .id(id)
+                .bankCardId("4111-1111-1111-1111")
+                .price(29.99f)
+                .entryDtos(Arrays.asList(
+                        OrderEntryDto.builder()
+                                .productId(productUUID)
+                                .quantity(1)
+                                .build()
+                ))
                 .build();
 
-        when(orderRepository.findByNaturalId(newId.getMostSignificantBits())).thenReturn(Optional.empty());
+        when(orderRepository.findById(orderMapper.uuidToLong(randId))).thenReturn(Optional.empty());
 
-        assertThrows(OrderNotFoundException.class, () -> orderService.updateOrder(newId, updatedOrderDto));
+        assertThrows(OrderNotFoundException.class, () -> orderService.updateOrder(randId, updatedOrderDto));
     }
 
     @Test
-    void updateOrder_withException_shouldThrowOrderUpdateException() {
-        UUID newId = UUID.randomUUID();
-        when(orderRepository.existsById(newId.getMostSignificantBits())).thenReturn(true);
-        when(orderRepository.findByNaturalId(newId.getMostSignificantBits())).thenThrow(new RuntimeException("Database error"));
+    void updateOrder_withUpdatedCard_shouldThrowOrderUpdateException() {
+        OrderEntity testOrderEntity = orderMapper.dtoToEntity(testOrderDto);
+        testOrderEntity.setId(orderMapper.uuidToLong(id));
 
-        assertThrows(OrderUpdateException.class, () -> orderService.updateOrder(newId, testOrderDto));
+        OrderDto updatedOrderDto = OrderDto.builder()
+                .id(id)
+                .bankCardId("5555-5555-1111-1111")
+                .price(29.99f)
+                .entryDtos(Arrays.asList(
+                        OrderEntryDto.builder()
+                                .productId(productUUID)
+                                .quantity(1)
+                                .build()
+                ))
+                .build();
+
+        when(orderRepository.findById(orderMapper.uuidToLong(id))).thenReturn(Optional.of(testOrderEntity));
+
+        assertThrows(OrderUpdateException.class, () -> orderService.updateOrder(id, updatedOrderDto));
     }
 
 
     @Test
     void deleteOrder_whenOrderExists_shouldCallRepositoryDelete() {
         OrderEntity testOrderEntity = orderMapper.dtoToEntity(testOrderDto);
-        testOrderEntity.setId(orderId);
+        testOrderEntity.setId(orderMapper.uuidToLong(id));
 
-        when(orderRepository.findByNaturalId(orderId)).thenReturn(Optional.of(testOrderEntity));
+        when(orderRepository.findById(orderMapper.uuidToLong(id))).thenReturn(Optional.of(testOrderEntity));
 
         orderService.deleteOrder(testOrderDto.getId());
 
-        verify(orderRepository, times(1)).deleteByNaturalId(orderId);
-    }*/
+        verify(orderRepository, times(1)).deleteById(orderMapper.uuidToLong(id));
+    }
 }
